added hover for nav bar and tab-list

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
          </ul>
     </nav>
     <section>
-    <span class="tab-list">
+    <div class="tab-list"> 
         <ul>
+            <div id="playstation-store">Playstation<span id="tm-font-size">tmStore</span></div>
             <li><a href="">Latest</a></li>
             <li><a href="">Collections</a></li>
             <li><a href="">Deals</a></li>
@@ -41,7 +42,7 @@
             <li><a href="">Subscriptions</a></li>
             <li><a href="">Browse</a></li>
         </ul>
-    </span>
+    </div>
     <div>
         <img id="main-image" src="https://i.redd.it/jd5kga5lwd131.jpg" alt="banner of call of duty modern warfare">
     </div>
